@@ -221,5 +221,6 @@ typedef struct listener_connection
   pbs_net_t address; /* internet address of listener */
   unsigned int port; /* internet port number of listener */
   int sock;           /* socket for this connection */
+  int first_time;
   } listener_connection;
 
